--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,27 @@
 spring:
   profiles:
     active: local
+server:
+  port: 8080
+  servlet:
+    context-path: /
+
 #mybatis配置
 mybatis:
   configuration:
     map-underscore-to-camel-case: true  #按驼峰命名规则自动匹配到实体类上,不需要用别名
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.yaa.model
+
+#mybatis-plus:
+#  mapper-locations: classpath:mapper/*.xml
+#  type-aliases-package: com.yaa.model
+#  configuration:
+#    map-underscore-to-camel-case: true
+#  global-config:
+#    db-config:
+#      table-prefix: bl_
+#      id-type: auto
 
 ---
 spring:
@@ -32,8 +47,6 @@ spring:
         min-idle: 5
         max-idle: 20
         max-total: 20
-server:
-  port: 8080
 logging:
   file: log/site.log
 blog:   #自定义属性
@@ -68,8 +81,7 @@ spring:
        testOnBorrow: false
        testOnReturn: false
 
-server:
-  port: 8080
+
 #  ssl:
 #    key-store: classpath:ssl/1534728933823.pfx
 #    key-store-password: 1534728933823
